overflow issues resolved?

--- a/styles/partials/_skills.scss
+++ b/styles/partials/_skills.scss
@@ -53,6 +53,7 @@
                 opacity: 0;
                 font-size: 1.2rem;
                 font-family: $headingFont;
+                padding-bottom: 15px;
             }
         }
     }
