--- a/styles/styles.css
+++ b/styles/styles.css
@@ -743,6 +743,7 @@ header .show {
   opacity: 0;
   font-size: 1.2rem;
   font-family: "Playfair Display SC", serif;
+  padding-bottom: 15px;
 }
 
 .projects {
